// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildOpenUiRepairPrompt > lists every missing state declaration before the draft and keeps the full hint list stable 1`] = `
"The previous OpenUI draft cannot be committed yet. Automatic repair attempt 1 of 1.
The draft excerpt below may be truncated. Fix every listed missing \`$var\` declaration even when some references are not visible in the excerpt.
The draft is syntactically valid but fails a product-quality check.
Use the current committed valid OpenUI source only as fallback context.
Stay close to the model draft below and fix only the listed quality issues with the smallest possible diff.
Do not rewrite unrelated parts, change unflagged behavior, or introduce new features.
Return a complete corrected program.

Original user request:
Build a 20-question quiz.

Current committed valid OpenUI source:
root = AppShell([])

Quality issues:
- undefined-state-reference in root: State reference \`$q1\` is missing a top-level declaration with a literal initial value. For example, add \`$q1 = ""\`.
- undefined-state-reference in root: State reference \`$q2\` is missing a top-level declaration with a literal initial value. For example, add \`$q2 = ""\`.
- undefined-state-reference in root: State reference \`$q3\` is missing a top-level declaration with a literal initial value. For example, add \`$q3 = ""\`.
- undefined-state-reference in root: State reference \`$q4\` is missing a top-level declaration with a literal initial value. For example, add \`$q4 = ""\`.
- undefined-state-reference in root: State reference \`$q5\` is missing a top-level declaration with a literal initial value. For example, add \`$q5 = ""\`.
- undefined-state-reference in root: State reference \`$q6\` is missing a top-level declaration with a literal initial value. For example, add \`$q6 = ""\`.
- undefined-state-reference in root: State reference \`$q7\` is missing a top-level declaration with a literal initial value. For example, add \`$q7 = ""\`.
- undefined-state-reference in root: State reference \`$q8\` is missing a top-level declaration with a literal initial value. For example, add \`$q8 = ""\`.
- undefined-state-reference in root: State reference \`$q9\` is missing a top-level declaration with a literal initial value. For example, add \`$q9 = ""\`.
- undefined-state-reference in root: State reference \`$q10\` is missing a top-level declaration with a literal initial value. For example, add \`$q10 = ""\`.
- undefined-state-reference in root: State reference \`$q11\` is missing a top-level declaration with a literal initial value. For example, add \`$q11 = ""\`.
- undefined-state-reference in root: State reference \`$q12\` is missing a top-level declaration with a literal initial value. For example, add \`$q12 = ""\`.
- undefined-state-reference in root: State reference \`$q13\` is missing a top-level declaration with a literal initial value. For example, add \`$q13 = ""\`.
- undefined-state-reference in root: State reference \`$q14\` is missing a top-level declaration with a literal initial value. For example, add \`$q14 = ""\`.
- undefined-state-reference in root: State reference \`$q15\` is missing a top-level declaration with a literal initial value. For example, add \`$q15 = ""\`.
- undefined-state-reference in root: State reference \`$q16\` is missing a top-level declaration with a literal initial value. For example, add \`$q16 = ""\`.
- undefined-state-reference in root: State reference \`$q17\` is missing a top-level declaration with a literal initial value. For example, add \`$q17 = ""\`.
- undefined-state-reference in root: State reference \`$q18\` is missing a top-level declaration with a literal initial value. For example, add \`$q18 = ""\`.
- undefined-state-reference in root: State reference \`$q19\` is missing a top-level declaration with a literal initial value. For example, add \`$q19 = ""\`.
- undefined-state-reference in root: State reference \`$q20\` is missing a top-level declaration with a literal initial value. For example, add \`$q20 = ""\`.

Targeted repair hints:
- Add every missing \`$var\` before root.
- Add: \`$q1 = ""\`, \`$q2 = ""\`, \`$q3 = ""\`, \`$q4 = ""\`, \`$q5 = ""\`, \`$q6 = ""\`, \`$q7 = ""\`, \`$q8 = ""\`, \`$q9 = ""\`, \`$q10 = ""\`, \`$q11 = ""\`, \`$q12 = ""\`, \`$q13 = ""\`, \`$q14 = ""\`, \`$q15 = ""\`, \`$q16 = ""\`, \`$q17 = ""\`, \`$q18 = ""\`, \`$q19 = ""\`, \`$q20 = ""\`.
- Example for declare missing $state before root:
  WRONG: root = AppShell([Screen("main", "Draft", [Text($draft, "body", "start")])])
  OK: $draft = ""
  OK: root = AppShell([Screen("main", "Draft", [Text($draft, "body", "start")])])

Relevant draft statement excerpts:
- root:
  root = AppShell([
    Screen("quiz", "Quiz", [
  Group("Question 1", "vertical", [
    Text("Question 1", "body", "start"),
    RadioGroup("question-1", "Question 1", $q1, [
      { label: "Yes", value: "yes" },
      { label: "No", value: "no" }
    ])
  ]),
  Group("Question 2", "vertical", [
    Text("Question 2", "body", "start"),
    RadioGroup("question-2", "Question 2", $q2, [
      { label: "Yes", value: "yes" },
      { label: "No", value: "no" }
    ])
  ]),
  Group("Question 3", "vertical", […

Model draft to repair:
root = AppShell([
  Screen("quiz", "Quiz", [
Group("Question 1", "vertical", [
  Text("Question 1", "body", "start"),
  RadioGroup("question-1", "Question 1", $q1, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 2", "vertical", [
  Text("Question 2", "body", "start"),
  RadioGroup("question-2", "Question 2", $q2, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 3", "vertical", [
  Text("Question 3", "body", "start"),
  RadioGroup("question-3", "Question 3", $q3, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 4", "vertical", [
  Text("Question 4", "body", "start"),
  RadioGroup("question-4", "Question 4", $q4, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 5", "vertical", [
  Text("Question 5", "body", "start"),
  RadioGroup("question-5", "Question 5", $q5, [
    { label: "Yes", value: "yes" },
    { label: "No", value: "no" }
  ])
]),
Group("Question 6", "vertical", [
  Text("Question 6", "body", "start"),
  RadioGroup("question-6", "Questi…

Current critical syntax rules:
- Place the full corrected OpenUI Lang program in \`source\`. Make \`summary\` a short user-facing description of the visible app/change with concrete features/screens, not generic "Updated the app" text.
- Use only supported components and tools.
- Every @Run(ref) must reference a defined Query or Mutation.
- AppShell must be the single root statement; never nest AppShell and never define a second AppShell anywhere else in the source.
- Define \`$state\`, collections, derived values, Query/Mutation refs, and reusable component refs as top-level statements outside AppShell/Screen/Group child arrays.
- Component children arrays may contain only component refs or component calls, not declarations such as \`$x = ...\`, \`items = [...]\`, or \`row = Group(...)\`.
- AppShell signature is AppShell(children, appearance?).
- Screen signature is Screen(id, title, children, isActive?, appearance?).
- Screen never contains another Screen at any depth. Keep Screens as top-level AppShell children and use Group for local layout inside a screen.
- Group signature is Group(title, direction, children, variant?, appearance?).
- The second Group argument is direction and must be "vertical" or "horizontal".
- If you pass a Group variant, place it in the optional fourth argument.
- Never put "block" or "inline" in the second Group argument.
- Repeater never contains another Repeater at any depth. Flatten nested list ideas or use Group inside the row template instead of nesting Repeaters.
- Mutation(...) and Query(...) must be top-level statements. Never inline them inside @Each(...), Repeater(...), component props, or other expressions.
- RadioGroup and Select options must be arrays of { label, value } objects. Never use bare string or number arrays for options.
- Validation rules must be literal arrays. To skip validation before \`action\` or \`appearance\`, use \`null\` or \`[]\`.
- When RadioGroup or Select runs in action mode, the runtime writes the newly selected option to \`$lastChoice\` before the action runs.
- Use \`$lastChoice\` only inside Select/RadioGroup action-mode flows or the top-level Mutation(...) / Query(...) statements those actions run.
- Do not read \`$lastChoice\` directly in Text(...), disabled expressions, or unrelated statements.
- Use appearance only as { mainColor?: "#RRGGBB", contrastColor?: "#RRGGBB" }.
- Text supports only appearance.contrastColor. Do not pass appearance.mainColor to Text.
- For any \`Button\` variant with appearance, background uses mainColor and text uses contrastColor.
- Never use CSS, className, style objects, named colors, rgb(), hsl(), var(), url(), or arbitrary layout styling.
- Use $currentScreen + @Set for screen navigation.
- Declare every \`$var\` that appears anywhere in the program at the top with a literal initial value, even if the draft excerpt below is truncated.
- Button signature is Button(id, label, vari…"
`;

exports[`buildOpenUiRepairPrompt > truncates the draft before issues and hints when the repair prompt is over budget 1`] = `
"The previous OpenUI draft cannot be committed yet. Automatic repair attempt 1 of 1.
The draft excerpt below may be truncated. Fix every listed missing \`$var\` declaration even when some references are not visible in the excerpt.
The draft is syntactically valid but fails a product-quality check.
Use the current committed valid OpenUI source only as fallback context.
Stay close to the model draft below and fix only the listed quality issues with the smallest possible diff.
Do not rewrite unrelated parts, change unflagged behavior, or introduce new features.
Return a complete corrected program.

Original user request:
Build a 20-question quiz.

Current committed valid OpenUI source:
root = AppShell([])

Quality issues:
- undefined-state-reference in root: State reference \`$q1\` is missing a top-level declaration with a literal initial value. For example, add \`$q1 = ""\`.
- undefined-state-reference in root: State reference \`$q2\` is missing a top-level declaration with a literal initial value. For example, add \`$q2 = ""\`.
- undefined-state-reference in root: State reference \`$q3\` is missing a top-level declaration with a literal initial value. For example, add \`$q3 = ""\`.
- undefined-state-reference in root: State reference \`$q4\` is missing a top-level declaration with a literal initial value. For example, add \`$q4 = ""\`.
- undefined-state-reference in root: State reference \`$q5\` is missing a top-level declaration with a literal initial value. For example, add \`$q5 = ""\`.
- undefined-state-reference in root: State reference \`$q6\` is missing a top-level declaration with a literal initial value. For example, add \`$q6 = ""\`.
- undefined-state-reference in root: State reference \`$q7\` is missing a top-level declaration with a literal initial value. For example, add \`$q7 = ""\`.
- undefined-state-reference in root: State reference \`$q8\` is missing a top-level declaration with a literal initial value. For example, add \`$q8 = ""\`.
- undefined-state-reference in root: State reference \`$q9\` is missing a top-level declaration with a literal initial value. For example, add \`$q9 = ""\`.
- undefined-state-reference in root: State reference \`$q10\` is missing a top-level declaration with a literal initial value. For example, add \`$q10 = ""\`.
- undefined-state-reference in root: State reference \`$q11\` is missing a top-level declaration with a literal initial value. For example, add \`$q11 = ""\`.
- undefined-state-reference in root: State reference \`$q12\` is missing a top-level declaration with a literal initial value. For example, add \`$q12 = ""\`.
- undefined-state-reference in root: State reference \`$q13\` is missing a top-level declaration with a literal initial value. For example, add \`$q13 = ""\`.
- undefined-state-reference in root: State reference \`$q14\` is missing a top-level declaration with a literal initial value. For example, add \`$q14 = ""\`.
- undefined-state-reference in root: State reference \`$q15\` is missing a top-level declaration with a literal initial value. For example, add \`$q15 = ""\`.
- undefined-state-reference in root: State reference \`$q16\` is missing a top-level declaration with a literal initial value. For example, add \`$q16 = ""\`.
- undefined-state-reference in root: State reference \`$q17\` is missing a top-level declaration with a literal initial value. For example, add \`$q17 = ""\`.
- undefined-state-reference in root: State reference \`$q18\` is missing a top-level declaration with a literal initial value. For example, add \`$q18 = ""\`.
- undefined-state-reference in root: State reference \`$q19\` is missing a top-level declaration with a literal initial value. For example, add \`$q19 = ""\`.
- undefined-state-reference in root: State reference \`$q20\` is missing a top-level declaration with a literal initial value. For example, add \`$q20 = ""\`.

Targeted repair hints:
- Add every missing \`$var\` before root.
- Add: \`$q1 = ""\`, \`$q2 = ""\`, \`$q3 = ""\`, \`$q4 = ""\`, \`$q5 = ""\`, \`$q6 = ""\`, \`$q7 = ""\`, \`$q8 = ""\`, \`$q9 = ""\`, \`$q10 = ""\`, \`$q11 = ""\`, \`$q12 = ""\`, \`$q13 = ""\`, \`$q14 = ""\`, \`$q15 = ""\`, \`$q16 = ""\`, \`$q17 = ""\`, \`$q18 = ""\`, \`$q19 = ""\`, \`$q20 = ""\`.
- Example for declare missing $state before root:
  WRONG: root = AppShell([Screen("main", "Draft", [Text($draft, "body", "start")])])
  OK: $draft = ""
  OK: root = AppShell([Screen("main", "Draft", [Text($draft, "body", "start")])])

Relevant draft statement excerpts:
- root…

Model draft to repair:
root = AppShell([
  Screen("quiz", "Quiz", [
Group("Question 1", "vertical", [
  Text("Question 1", "body", "start"),
  RadioGroup("question-1", "Question 1",…

Current critical syntax rules:
- Place the full corrected OpenUI Lang program in \`source\`. Make \`summary\` a short user-facing description of the visible app/change with concrete features/screens, not generic "Updated the app" text.
- Use only supported components and tools.
- Every @Run(ref) must reference a defined Query or Mutation.
- AppShell must be the single root statement; never nest AppShell and never define a second AppShell anywhere else in the source.
- Define \`$state\`, collections, derived values, Query/Mutation refs, and reusable component refs as top-level statements outside AppShell/Screen/Group child arrays.
- Component children arrays may contain only component refs or component calls, not declarations such as \`$x = ...\`, \`items = [...]\`, or \`row = Group(...)\`.
- AppShell signature is AppShell(children, appearance?).
- Screen signature is Screen(id, title, children, isActive?, appearance?).
- Screen never contains another Screen at any depth. Keep Screens as top-level AppShell children and use Group for local layout inside a screen.
- Group signature is Group(title, direction, children, variant?, appearance?).
- The second Group argument is direction and must be "vertical" or "horizontal".
- If you pass a Group variant, place it in the optional fourth argument.
- Never put "block" or "inline" in the second Group argument.
- Repeater never contains another Repeater at any depth. Flatten nested list ideas or use Group inside the row template instead of nesting Repeaters.
- Mutation(...) and Query(...) must be top-level statements. Never inline them inside @Each(...), Repeater(...), component props, or other expressions.
- RadioGroup and Select options must be arrays of { label, value } objects. Never use bare string or number arrays for options.
- Validation rules must be literal arrays. To skip validation before \`action\` or \`appearance\`, use \`null\` or \`[]\`.
- When RadioGroup or Select runs in action mode, the runtime writes the newly selected option to \`$lastChoice\` before the action runs.
- Use \`$lastChoice\` only inside Select/RadioGroup action-mode flows or the top-level Mutation(...) / Query(...) statements those actions run.
- Do not read \`$lastChoice\` directly in Text(...), disabled expressions, or unrelated statements.
- Use appearance only as { mainColor?: "#RRGGBB", contrastColor?: "#RRGGBB" }.
- Text supports only appearance.contrastColor. Do not pass appearance.mainColor to Text.
- For any \`Button\` variant with appearance, background uses mainColor and text uses contrastColor.
- Never use CSS, className, style objects, named colors, rgb(), hsl(), var(), url(), or arbitrary layout styling.
- Use $currentScreen + @Set for screen navigation.
- Declare every \`$var\` that appears anywhere in the program at the top with a literal initial value, even if the draft excerpt below is truncated.
- Button signature is Button(id, label, varia…"
`;

exports[`buildOpenUiRepairPrompt > uses append_item in the todo repair hint 1`] = `
"The previous OpenUI draft cannot be committed yet. Automatic repair attempt 1 of 1.
The draft is syntactically valid but fails a product-quality check.
Use the current committed valid OpenUI source only as fallback context.
Stay close to the model draft below and fix only the listed quality issues with the smallest possible diff.
Do not rewrite unrelated parts, change unflagged behavior, or introduce new features.
Return a complete corrected program.

Original user request:
Create a todo list.

Current committed valid OpenUI source:
root = AppShell([])

Quality issues:
- quality-missing-todo-controls in root: Todo request did not generate required todo controls.

Targeted repair hints:
- For a todo request, include an input for the draft value, a persisted \`Query("read_state", ...)\`, an \`append_item\` mutation for plain-object todo rows, a button action that runs the mutation and then the query, and a repeated list rendered through \`@Each(...)\` + \`Repeater(...)\`.
- Example for interactive todo pattern:
  WRONG: root = AppShell([Screen("main", "Todo", [Text("Todo", "title", "start")])])
  OK: $draft = ""
  OK: items = Query("read_state", { path: "app.items" }, [])
  OK: addItem = Mutation("append_item", { path: "app.items", value: { title: $draft, completed: false } })
  OK: rows = @Each(items, "item", ...)
  OK: Repeater(rows, "No tasks yet.")

Model draft to repair:
root = AppShell([])

Current critical syntax rules:
- Place the full corrected OpenUI Lang program in \`source\`. Make \`summary\` a short user-facing description of the visible app/change with concrete features/screens, not generic "Updated the app" text.
- Use only supported components and tools.
- Every @Run(ref) must reference a defined Query or Mutation.
- AppShell must be the single root statement; never nest AppShell and never define a second AppShell anywhere else in the source.
- Define \`$state\`, collections, derived values, Query/Mutation refs, and reusable component refs as top-level statements outside AppShell/Screen/Group child arrays.
- Component children arrays may contain only component refs or component calls, not declarations such as \`$x = ...\`, \`items = [...]\`, or \`row = Group(...)\`.
- AppShell signature is AppShell(children, appearance?).
- Screen signature is Screen(id, title, children, isActive?, appearance?).
- Screen never contains another Screen at any depth. Keep Screens as top-level AppShell children and use Group for local layout inside a screen.
- Group signature is Group(title, direction, children, variant?, appearance?).
- The second Group argument is direction and must be "vertical" or "horizontal".
- If you pass a Group variant, place it in the optional fourth argument.
- Never put "block" or "inline" in the second Group argument.
- Repeater never contains another Repeater at any depth. Flatten nested list ideas or use Group inside the row template instead of nesting Repeaters.
- Mutation(...) and Query(...) must be top-level statements. Never inline them inside @Each(...), Repeater(...), component props, or other expressions.
- RadioGroup and Select options must be arrays of { label, value } objects. Never use bare string or number arrays for options.
- Validation rules must be literal arrays. To skip validation before \`action\` or \`appearance\`, use \`null\` or \`[]\`.
- When RadioGroup or Select runs in action mode, the runtime writes the newly selected option to \`$lastChoice\` before the action runs.
- Use \`$lastChoice\` only inside Select/RadioGroup action-mode flows or the top-level Mutation(...) / Query(...) statements those actions run.
- Do not read \`$lastChoice\` directly in Text(...), disabled expressions, or unrelated statements.
- Use appearance only as { mainColor?: "#RRGGBB", contrastColor?: "#RRGGBB" }.
- Text supports only appearance.contrastColor. Do not pass appearance.mainColor to Text.
- For any \`Button\` variant with appearance, background uses mainColor and text uses contrastColor.
- Never use CSS, className, style objects…"
`;
